objects/TSE_Request__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Schedule Break</fullName>
                </value>
                <value>
                    <fullName>Clock In</fullName>
                </value>
                <value>
                    <fullName>Clock Out</fullName>
                </value>
                <value>
                    <fullName>Interrupt Activity</fullName>
                </value>
                <value>
                    <fullName>Resume Activity</fullName>
                </value>
                <value>
                    <fullName>Work Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Break_Type__c</fullName>
        <label>Break Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Immediate_Action_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Immediate Action Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immediate_Action__c</fullName>
        <description>Option for taking an immediate action</description>
        <label>Immediate Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Break</fullName>
                </value>
                <value>
                    <fullName>Resume Previous Work</fullName>
                </value>
                <value>
                    <fullName>End of Day Travel</fullName>
                </value>
                <value>
                    <fullName>Clock Out</fullName>
                </value>
                <value>
                    <fullName>Other Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>TSE Requests</relationshipLabel>
        <relationshipName>TSE_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Idle</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Arrival</fullName>
                </value>
                <value>
                    <fullName>Work In Progress</fullName>
                </value>
                <value>
                    <fullName>Break</fullName>
                </value>
                <value>
                    <fullName>End of Day Travel</fullName>
                </value>
                <value>
                    <fullName>Additional Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related User for who the time sheet entry is being made</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TSE_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Line Item</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>TSE Requests</relationshipLabel>
        <relationshipName>TSE_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>TSE Requests</relationshipLabel>
        <relationshipName>TSE_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TSE Request</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>TSE Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TSE Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Notes_Required_For_Other</fullName>
        <active>false</active>
        <errorConditionFormula>(ISPICKVAL( Immediate_Action__c ,&apos;Other&apos;))  &amp;&amp;  ISBLANK( Immediate_Action_Notes__c )</errorConditionFormula>
        <errorMessage>Additional notes are required when selecting &apos;Other&apos;</errorMessage>
    </validationRules>
</CustomObject>